--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.change-log=classpath:db/master.xml
+# for ResponseStatusException
+server.error.include-message=always
 #spring.flyway.baseline-on-migrate = true
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
