--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.liquibase.change-log=classpath:db/master.xml
+#https
+server.port=8080
+server.ssl.key-store-type=JKS
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
 # for ResponseStatusException
 server.error.include-message=always
 #spring.flyway.baseline-on-migrate = true
