--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -8,15 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.liquibase.change-log=classpath:db/master.xml
 #https
 server.port=8080
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=password
-server.ssl.key-alias=localhost
-server.ssl.enabled=true
+server.ssl.enabled=false
 # for ResponseStatusException
 server.error.include-message=always
-#spring.flyway.baseline-on-migrate = true
-#spring.h2.console.enabled=true
-#spring.jpa.show-sql=true
-#server.servlet.session.timeout=86400s
-#spring.session.timeout=86400s
+spring.profiles.include=test
