add add angular

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,7 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=localhost
+server.servlet.context-path=/api
 server.ssl.enabled=true
 # for ResponseStatusException
 server.error.include-message=always
