workaround for test

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -11,4 +11,4 @@ server.port=8080
 server.ssl.enabled=false
 # for ResponseStatusException
 server.error.include-message=always
-spring.profiles.include=test
+server.servlet.context-path=/api
