--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.ssl.enabled=true
 # for ResponseStatusException
 server.error.include-message=always
 #spring.flyway.baseline-on-migrate = true
-#spring.h2.console.enabled=true
-#spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
 #server.servlet.session.timeout=86400s
 #spring.session.timeout=86400s
