--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -12,3 +12,6 @@ server.ssl.enabled=false
 # for ResponseStatusException
 server.error.include-message=always
 server.servlet.context-path=/api
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=60000
