--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=60000
 spring.datasource.url=jdbc:h2:file:~/qa_app;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
 spring.datasource.username=usr
 spring.datasource.password=usr
