--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:h2:file:~/qa_app;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:mem:testDb;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
 spring.datasource.username=usr
 spring.datasource.password=usr
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.liquibase.change-log=classpath:db/master.xml
 #https
@@ -14,4 +13,4 @@ server.error.include-message=always
 server.servlet.context-path=/api
 jwt.header=Authorization
 jwt.secret=mySecret
-jwt.expiration=60000
+jwt.expiration=48
