--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=usr
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.liquibase.change-log=classpath:db/master.xml
+spring.liquibase.change-log=classpath:db/master-test.xml
 #https
 server.port=8080
 server.ssl.enabled=false
