--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.liquibase.change-log=classpath:db/master.xml
+spring.jpa.hibernate.ddl-auto=validate
 #https
 server.port=8080
 server.ssl.key-store-type=PKCS12
@@ -18,7 +19,6 @@ server.servlet.context-path=/api
 server.ssl.enabled=true
 # for ResponseStatusException
 server.error.include-message=always
-#spring.flyway.baseline-on-migrate = true
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 #server.servlet.session.timeout=86400s
