--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,8 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=localhost
 server.servlet.context-path=/api
-server.ssl.enabled=true
+# disabled for angular
+server.ssl.enabled=false
 # for ResponseStatusException
 server.error.include-message=always
 spring.h2.console.enabled=true
