--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,5 +22,6 @@ server.ssl.enabled=false
 server.error.include-message=always
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+spring.profiles=test
 #server.servlet.session.timeout=86400s
 #spring.session.timeout=86400s
