--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,13 @@
+# active profile
+spring.profiles.active=mysql
+# jwt
 jwt.header=Authorization
 jwt.secret=mySecret
 jwt.expiration=60000
-spring.datasource.url=jdbc:h2:file:~/qa_app;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
-spring.datasource.username=usr
-spring.datasource.password=usr
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.path=/h2
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# data
 spring.liquibase.change-log=classpath:db/master.xml
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 #https
 server.port=8080
 server.ssl.key-store-type=PKCS12
@@ -20,8 +19,5 @@ server.servlet.context-path=/api
 server.ssl.enabled=false
 # for ResponseStatusException
 server.error.include-message=always
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.profiles=test
 #server.servlet.session.timeout=86400s
 #spring.session.timeout=86400s
