--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -14,3 +14,5 @@ server.servlet.context-path=/api
 jwt.header=Authorization
 jwt.secret=mySecret
 jwt.expiration=48
+# ignore WebConfig.java
+spring.profiles=!dev
