--- a/backend/src/main/resources/application-mysql.properties
+++ b/backend/src/main/resources/application-mysql.properties
@@ -1,5 +1,8 @@
 # Data
-spring.datasource.url=jdbc:mysql://localhost:6604/internal
+#ds for running the app on localhost
+#spring.datasource.url=jdbc:mysql://localhost:6604/internal
+#ds for running the app within docker
+spring.datasource.url=jdbc:mysql://internal-mysql:3306/internal
 spring.datasource.username=user
 spring.datasource.password=user_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
