--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -109,6 +109,12 @@
             <artifactId>dockerfile-maven-plugin</artifactId>
             <version>1.4.13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
