--- a/backend/src/main/resources/application-h2.properties
+++ b/backend/src/main/resources/application-h2.properties
@@ -1,3 +1,4 @@
+# find more about h2 specific settings here http://www.h2database.com/html/features.html
 spring.datasource.url=jdbc:h2:file:~/qa_app;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
 spring.datasource.username=usr
 spring.datasource.password=usr
